k8s/chrome-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chrome
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chrome
  template:
    metadata:
      labels:
        app: chrome
    spec:
      containers:
      - name: chrome
        image: selenium/standalone-chrome:142.0-20260404
        resources:
          requests:
            memory: 700Mi
            cpu: 400m
          limits:
            memory: 1Gi
            cpu: 800m
        ports:
        - containerPort: 4444
        readinessProbe:
          httpGet:
            path: /wd/hub/status
            port: 4444
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /wd/hub/status
            port: 4444
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
          timeoutSeconds: 5
          initialDelaySeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: chrome
spec:
  selector:
    app: chrome
  ports:
  - port: 4444
    targetPort: 4444
  type: ClusterIP
